--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+    compile('org.projectlombok:lombok')
+    testCompile "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
