--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     compile('org.projectlombok:lombok')
+    annotationProcessor("org.projectlombok:lombok:1.18.8")
     testCompile "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
