--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,13 @@ repositories {
 
 dependencies {
     compile('org.projectlombok:lombok')
+
     annotationProcessor("org.projectlombok:lombok:1.18.8")
     testCompile "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     runtimeOnly 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
