--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,13 @@ repositories {
 
 dependencies {
     compile('org.projectlombok:lombok')
-
+    dependencies {
+        compile 'io.jsonwebtoken:jjwt-api:0.11.1'
+        runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
+                // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
+                //'org.bouncycastle:bcprov-jdk15on:1.60',
+                'io.jsonwebtoken:jjwt-jackson:0.11.1' // or 'io.jsonwebtoken:jjwt-gson:0.11.1' for gson
+    }
     annotationProcessor("org.projectlombok:lombok:1.18.8")
     testCompile "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
