--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,14 @@ sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile('org.projectlombok:lombok')
-    dependencies {
-        compile 'io.jsonwebtoken:jjwt-api:0.11.1'
-        runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
-                // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
-                //'org.bouncycastle:bcprov-jdk15on:1.60',
-                'io.jsonwebtoken:jjwt-jackson:0.11.1' // or 'io.jsonwebtoken:jjwt-gson:0.11.1' for gson
-    }
+    compile('io.jsonwebtoken:jjwt-api:0.11.1')
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
+            'io.jsonwebtoken:jjwt-jackson:0.11.1' // or 'io.jsonwebtoken:jjwt-gson:0.11.1' for gson
     annotationProcessor("org.projectlombok:lombok:1.18.8")
     testCompile "org.projectlombok:lombok"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -28,9 +25,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     runtimeOnly 'com.h2database:h2'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testCompile "org.springframework.boot:spring-boot-starter-test"
+    implementation 'junit:junit:4.12'
 }
 
 test {
