--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile('org.projectlombok:lombok')
     compile('io.jsonwebtoken:jjwt-api:0.11.1')
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
