--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile('org.projectlombok:lombok')
+    compile('org.mariadb.jdbc:mariadb-java-client')
     compile('io.jsonwebtoken:jjwt-api:0.11.1')
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
             'io.jsonwebtoken:jjwt-jackson:0.11.1' // or 'io.jsonwebtoken:jjwt-gson:0.11.1' for gson
