--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile('org.projectlombok:lombok')
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
     compile('org.mariadb.jdbc:mariadb-java-client')
     compile('io.jsonwebtoken:jjwt-api:0.11.1')
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
