db properties 설정 및 S3 연결

--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=oauth,real-db
+spring.h2.console.enabled=false
+spring.profiles.include=real-db, real-aws
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.session.store-type=jdbc
-
