properties 추가 및 WebConfig header문제 해결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.autoconfigure.exclude:org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
+spring.profiles.include=real-aws
 
