--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
-plugins {
-    id 'org.springframework.boot' version '2.2.5.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'java'
+buildscript {
+    ext {
+        springBootVersion = '2.1.9.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -32,8 +44,4 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     testCompile "org.springframework.boot:spring-boot-starter-test"
     implementation 'junit:junit:4.12'
-}
-
-test {
-    useJUnitPlatform()
 }
