--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.autoconfigure.exclude:org.springframework.boot.autoconfigure.security.ser
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.profiles.include=real-aws
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
